[tool.poetry]
name = "thw"
version = "0.1.0"
description = ""
authors = ["Christina Ludwig <christina_ludwig@gmx.net>"]

[tool.poetry.dependencies]
python = "^3.9"
pb-tool = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
